--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Tahn Thawainin <pzt002@auburn.edu>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "3.11.7"
 numpy = "^1.26.4"
 pandas = "^2.2.1"
 pyyaml = "^6.0.1"
